fileupload ya carga archivos a base de datos

--- a/IndicadoresFreyman/Web.config
+++ b/IndicadoresFreyman/Web.config
@@ -12,17 +12,11 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
-
-   
-
-
-
     <pages>
       <controls>
         <add tagPrefix="telerik" namespace="Telerik.Web.UI" assembly="Telerik.Web.UI" />
       </controls>
-    </pages>
-    
+    </pages>	  
   </system.web>
   <system.codedom>
     <compilers>
@@ -30,6 +24,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+	<system.webServer>
+		<handlers>
+			<add name="Telerik.Web.UI.WebResource" verb="*" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" preCondition="integratedMode,runtimeVersionv4.0" />
+		</handlers>
+	</system.webServer>
 
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
