--- a/IndicadoresFreyman/IndicadoresFreyman.csproj
+++ b/IndicadoresFreyman/IndicadoresFreyman.csproj
@@ -116,6 +116,7 @@
     <Content Include="crearIndicador.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Indicadores\EvidenciaIndicadores.aspx" />
+    <Content Include="Indicadores\HistoricoIndicadores.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +137,13 @@
     </Compile>
     <Compile Include="Indicadores\EvidenciaIndicadores.aspx.designer.cs">
       <DependentUpon>EvidenciaIndicadores.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Indicadores\HistoricoIndicadores.aspx.cs">
+      <DependentUpon>HistoricoIndicadores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Indicadores\HistoricoIndicadores.aspx.designer.cs">
+      <DependentUpon>HistoricoIndicadores.aspx</DependentUpon>
     </Compile>
     <Compile Include="MasterPage.Master.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
