--- a/IndicadoresFreyman/IndicadoresFreyman.csproj
+++ b/IndicadoresFreyman/IndicadoresFreyman.csproj
@@ -111,7 +111,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="crearIndicador.aspx" />
+    <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Log.aspx" />
+    <Content Include="Reportes\ReporteTableroHist.aspx" />
+    <Content Include="Reportes\ReporteTableroHistorico.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -123,8 +127,22 @@
     <Compile Include="crearIndicador.aspx.designer.cs">
       <DependentUpon>crearIndicador.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Log.aspx.cs">
+      <DependentUpon>Log.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Log.aspx.designer.cs">
+      <DependentUpon>Log.aspx</DependentUpon>
     </Compile>
     <Compile Include="MasterPage.Master.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
@@ -134,6 +152,20 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\ReporteTableroHist.aspx.cs">
+      <DependentUpon>ReporteTableroHist.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\ReporteTableroHist.aspx.designer.cs">
+      <DependentUpon>ReporteTableroHist.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\ReporteTableroHistorico.aspx.cs">
+      <DependentUpon>ReporteTableroHistorico.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\ReporteTableroHistorico.aspx.designer.cs">
+      <DependentUpon>ReporteTableroHistorico.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="MasterPage.Master" />
@@ -147,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Imagenes\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
