--- a/IndicadoresFreyman/IndicadoresFreyman.csproj
+++ b/IndicadoresFreyman/IndicadoresFreyman.csproj
@@ -208,6 +208,7 @@
     <Content Include="Reportes\ReporteRRHH.aspx" />
     <Content Include="Reportes\ReporteTableroHist.aspx" />
     <Content Include="Reportes\ReporteTableroHistorico.aspx" />
+    <Content Include="Reportes\Tablero.aspx" />
     <Content Include="Reportes\TableroHistorico.aspx" />
     <Content Include="usuario.png" />
     <Content Include="Web.config" />
@@ -316,6 +317,13 @@
     </Compile>
     <Compile Include="Reportes\ReporteTableroHistorico.aspx.designer.cs">
       <DependentUpon>ReporteTableroHistorico.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Tablero.aspx.cs">
+      <DependentUpon>Tablero.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\Tablero.aspx.designer.cs">
+      <DependentUpon>Tablero.aspx</DependentUpon>
     </Compile>
     <Compile Include="Reportes\TableroHistorico.aspx.cs">
       <DependentUpon>TableroHistorico.aspx</DependentUpon>
