--- a/IndicadoresFreyman/IndicadoresFreyman.csproj
+++ b/IndicadoresFreyman/IndicadoresFreyman.csproj
@@ -181,6 +181,7 @@
     <Content Include="Global.asax" />
     <Content Include="Imagenes\Actualizar.png" />
     <Content Include="Log.aspx" />
+    <Content Include="Reportes\Graficas.aspx" />
     <Content Include="Reportes\ReporteTableroHist.aspx" />
     <Content Include="Reportes\ReporteTableroHistorico.aspx" />
     <Content Include="crearIndicadores.aspx" />
@@ -296,6 +297,13 @@
       <DependentUpon>Paramentros.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\Graficas.aspx.cs">
+      <DependentUpon>Graficas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\Graficas.aspx.designer.cs">
+      <DependentUpon>Graficas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\ReporteRRHH.aspx.cs">
       <DependentUpon>ReporteRRHH.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
